--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@ To-dos
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>Three.js - Fundamentals 3 cubes</title>
+    <title>three.js test</title>
     <style>
         html, body { margin: 0; height: 100%; }
         #c { width: 100%; height: 100%; display: block; } </style>
