--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@ To-dos
 2. add more lights
 3. rewrite python file in php
 4. allow input of cif and res files
-5. account for monoclinic, triclinic, trigonal, and hexagonal unit cells
+5. account for monoclinic, triclinic, and hexagonal unit cells
 -->
 <head>
     <meta charset="utf-8">
