--- a/test.html
+++ b/test.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+<!-- 
+To-dos
+1. include data for ions.
+2. account for monoclinic, triclinic, trigonal, and hexagonal unit cells
+3. allow multiple instances of the unit cell in same animation
+-->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
